[gd_scene load_steps=9 format=2]

[ext_resource path="res://nodes/Basic Game Mechanics/SpawningObelisk.gd" type="Script" id=1]
[ext_resource path="res://textures/Prototype/dark.tres" type="Material" id=2]
[ext_resource path="res://scripts/trap/SpawnAThing.gd" type="Script" id=3]
[ext_resource path="res://nodes/Particles/ObeliskParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://sound/sfx/slide/heavy-stone-door-opens.mp3" type="AudioStream" id=5]
[ext_resource path="res://sound/sfx/cracking/breaking-rocks.mp3" type="AudioStream" id=6]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5 )

[node name="SpawnAThing" type="Spatial"]
script = ExtResource( 3 )

[node name="Obelisk" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )
script = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="Obelisk"]

[node name="CollisionShape" type="CollisionShape" parent="Obelisk/StaticBody"]
shape = SubResource( 2 )

[node name="Particles" parent="Obelisk" instance=ExtResource( 4 )]
amount = 10

[node name="StoneSlidingSound" type="AudioStreamPlayer3D" parent="Obelisk"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0 )
stream = ExtResource( 5 )

[node name="StoneBreakingSound" type="AudioStreamPlayer3D" parent="Obelisk"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0 )
stream = ExtResource( 6 )

[node name="Despawn" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -0.217769, -0.736419, -0.260151, 0.435539, 1.96893, 0.520302 )

[connection signal="timeout" from="Despawn" to="." method="_on_Despawn_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
